--- a/Toe.html
+++ b/Toe.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Affordable and professional web design">
+          <meta name="keywords" content="web design, affordable web design, professional web design">
+          <meta name="author" content="Matthew Davidson">
+        <title>Lift Off! | About</title>
+        <link rel="stylesheet" href="./css/Tac.css">
+      </head>
 <div id="errors" style="
   background: #c00;
   color: #fff;
@@ -36,3 +47,4 @@ console.error = (function(old) {
   }
 })(console.error);
 </script>
+</html>
